make hyprland and fuzzel colorscheme more vibrant, fit to ags scheme

--- a/home/Liqyid/common/optional/ags/scripts/templates/hypr/hyprland_colors.conf
+++ b/home/Liqyid/common/optional/ags/scripts/templates/hypr/hyprland_colors.conf
@@ -1,5 +1,6 @@
-$activeBorder = rgba({{ $onSurface }}39)
+$activeBorder = rgba({{ $primaryContainer }}99)
+$activeBorderGrad = rgba({{ $tertiaryContainer }}99)
 $inactiveBorder = rgba({{ $outline }}30)
 $backgroundColor = rgba({{ $surface }}FF)
-$pinnedWindowBase = rgba({{ $surface }}FF)
-$pinnedWindowGrad = rgba({{ $primary }}77)
+$pinnedWindow = rgba({{ $primaryContainer }}FF)
+$pinnedWindowGrad = rgba({{ $tertiaryContainer }}77)
