dry: symlink redundant ags config files

--- a/home/Liqyid/common/optional/desktop/ags/ags_notebook/templates/hypr/hyprland_colors.conf
+++ b/home/Liqyid/common/optional/desktop/ags/ags_notebook/templates/hypr/hyprland_colors.conf
@@ -1,6 +1,1 @@
-$activeBorder = rgba({{ $primaryContainer }}99)
-$activeBorderGrad = rgba({{ $tertiaryContainer }}99)
-$inactiveBorder = rgba({{ $outline }}30)
-$backgroundColor = rgba({{ $surface }}FF)
-$pinnedWindow = rgba({{ $primaryContainer }}FF)
-$pinnedWindowGrad = rgba({{ $tertiaryContainer }}77)
+../../../ags_desktop/templates/hypr/hyprland_colors.conf
